--- a/src/index.css
+++ b/src/index.css
@@ -7,21 +7,26 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+
 code {
   font-family: Consolas, source-code-pro, Menlo, Monaco, "Courier New",
     monospace;
 }
 
-/* CSS for chat container */
+
+
 .chat-page {
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #1c1c1e; /* Update background color to dark */
-  color: #fff; /* Update text color to white */
+  background-color: #1c1c1e;
+  color: #fff;
 }
+
+
 
 .model-dropdown select {
   padding: 10px;
@@ -32,15 +37,14 @@ code {
   color: #989898;
 }
 
+
+
 .custom-select {
   display: flex;
   width: 88%;
-
   padding: 10px;
   margin: auto;
   font-size: 1.1rem;
-
-
   background-color: #3a3a3c;
   color: #989898;
   background-clip: padding-box;
@@ -49,27 +53,43 @@ code {
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-/* CSS for chat messages */
+
+
 .chat-container {
   height: calc(80vh - 60px);
   width: 62%;
   max-width: 2000px;
   margin: 0 auto;
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   overflow-y: scroll;
-  background-color: #2c2c2e; /* Update background color to dark */
+  background-color: #2c2c2e;
   border-radius: 15px;
   padding: 30px;
   box-sizing: border-box;
-  
 }
+
+
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 19%;
+  height: calc(80vh - 60px);
+  background-color: #1c1c1e;
+  padding: 38px;
+  box-sizing: border-box;
+}
+
+
 
 .chat-container::-webkit-scrollbar {
-  display: none; /* Safari and Chrome */
+  display: none;
 }
 
-/* CSS for chat message */
+
+
 .chat-message {
   display: flex;
   flex-direction: column;
@@ -77,47 +97,56 @@ code {
   margin-bottom: 10px;
 }
 
+
+
 .user-message {
   align-items: flex-end;
   margin-left: 38%;
-
-  
 }
+
+
 
 .assistant-message {
   align-items: flex-start;
   width: 62%;
-
-
 }
+
+
 
 .message-role {
   font-size: 0.91.1rem;
   font-weight: bold;
 }
 
+
+
 .message-content {
   padding: 10px;
   border-radius: 8px;
   font-size: 1.2rem;
-  background-color: #fff; /* Update background color to white */
-  color: #1c1c1e; /* Update text color to dark */
+  background-color: #fff;
+  color: #1c1c1e;
 }
+
+
 
 .no-history {
   padding: 10px;
   border-radius: 8px;
   font-size: 1.2rem;
-  background-color: #404044; /* Update background color to white */
-  color: #fff; /* Update text color to dark */
+  background-color: #404044;
+  color: #fff;
 }
 
-/* CSS for chat input */
+
+
 .chat-input {
   display: flex;
   gap: 10px;
   margin-top: 20px;
 }
+
+
 
 .input-field {
   flex: 1;
@@ -128,6 +157,8 @@ code {
   background-color: #404044;
   color: #fff;
 }
+
+
 
 .submit-button {
   padding: 10px 20px;
@@ -140,31 +171,45 @@ code {
   transition: background-color 0.3s ease;
 }
 
+
+
 .submit-button:hover {
-  background-color: #32de48; /* Update background color on hover */
+  background-color: #32de48;
   font-size: 1.1rem;
   font-weight: bold;
 }
 
-.sidebar {
-  position: fixed;
-  top: 0;
-  right: 0;
+
+
+.switch-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   width: 19%;
-  height: calc(80vh - 60px);
-  background-color: #1c1c1e;
-  padding: 20px;
-  box-sizing: border-box;
 }
 
 
 
-/* CSS for error message */
+.switch-button {
+  padding: 10px;
+  font-size: 1.1rem;
+  border-radius: 5px;
+  border: none;
+  background-color: #3a3a3c;
+  color: #989898;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+
+
 .error-message {
   margin-top: 10px;
   font-size: 0.9rem;
-  color: #ff453a; /* Update text color to red */
+  color: #ff453a;
 }
+
+
 
 .model-dropdown {
   margin-bottom: 20px;
